# rust_notes

./: Cargo.toml  README.md
cffi/: .gitignore  Cargo.toml  README.md  call_cffi.c  run.sh
cffi/src/: lib.rs
gst_reader/: Cargo.toml
gst_reader/src/: main.rs
macro_examples/src/: lib.rs
multicast_sockets/: .gitignore  Cargo.toml  android.runner
multicast_sockets/.cargo/: config.toml
multicast_sockets/src/: lib.rs
reinterpret_signedness/: Cargo.toml
reinterpret_signedness/src/: main.rs
send_sync/: Cargo.toml  README.md
src/: main.rs
stream_modulation/: Cargo.toml
stream_modulation/src/: lib.rs
