[package]
name = "gst_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-slice-cast = "1.2.2"
gstreamer = "0.19.1"
gstreamer-app = "0.19.0"
gstreamer-video = "0.19.0"
image = "0.24.4"
signal-hook = "0.3.14"
simple-error = "0.2.3"
